# BoostAsioPractice

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
BoostAsioCLientMain/: CMakeLists.txt
BoostAsioCLientMain/Src/: main.cpp
BoostAsioClient/: CMakeLists.txt
BoostAsioClient/Include/BoostAsioClient/: AsyncClient.h  StackfulCoroutineClient.h  StacklessCoroutineClient.h  SyncClient.h
BoostAsioClient/Src/: AsyncClient.cpp  StackfulCoroutineClient.cpp  StacklessCoroutineClient.cpp  SyncClient.cpp  main.cpp
BoostAsioClientMain/Src/: main.cpp
BoostAsioServer/: CMakeLists.txt
BoostAsioServer/Include/BoostAsioServer/: AsyncServer.h  SyncServer.h
BoostAsioServer/Src/: AsyncServer.cpp  SyncServer.cpp  main.cpp
BoostAsioServerMain/: CMakeLists.txt
BoostAsioServerMain/Src/: main.cpp
CMakeModules/: FindCatch.cmake  Utility.cmake
Core/: CMakeLists.txt
Core/Include/Core/: Core.hpp  Utility.hpp
Core/Src/: Utility.cpp
Test/: CMakeLists.txt
Test/UnitTest/: CMakeLists.txt
Test/UnitTest/BoostAsioClient/: AsyncClientTest.cpp  ClientTestUtility.cpp  ClientTestUtility.h  StackfulCoroutineClientTest.cpp  StacklessCoroutineClientTest.cpp  SyncClientTest.cpp
Test/UnitTest/BoostAsioServer/: AsyncServerTest.cpp  SyncServerTest.cpp
Test/UnitTest/Core/: UtilityTest.cpp
scripts/travis/: install_boost.sh
